--- a/src/app/pages/setion-info/setion-info.page.html
+++ b/src/app/pages/setion-info/setion-info.page.html
@@ -1,11 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      断面详情
-    </ion-title>
+    <ion-title>setion_info</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    
+
 </ion-content>
