--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,11 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      断面详情
+      Tab Four
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    
-</ion-content>
+<ion-content></ion-content>
