--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,18 +3,36 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
       <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-label>首页</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
       <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-label>地图</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
       <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-label>排序</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="tab4">
+      <ion-icon name="send"></ion-icon>
+      <ion-label>关于</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
+  
+  <!-- <ion-tab title='yu' icon-off="thsicon-home" icon-on='thsicon-home1' href='#/tab1'>
+      
+  </ion-tab>
+  <ion-tab title='yu' icon-off="thsicon-cloud" icon-on='thsicon-cloud1' href='#/tab1'>
+      
+  </ion-tab>
+  <ion-tab title='yu' icon-off="thsicon-cloud" icon-on='thsicon-cloud1' href='#/tab1'>
+      
+  </ion-tab>
+  <ion-tab title='yu' icon-off="thsicon-cloud" icon-on='thsicon-cloud1' href='#/tab1'>
+      
+  </ion-tab> -->
 
 </ion-tabs>
