--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,9 +3,71 @@
     <ion-title>
       断面详情
     </ion-title>
+    <ion-icon name='add' slot="end"></ion-icon>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    
+  <div class="list">
+    <div *ngFor="let obj of list,let i = index">
+      <ion-list-header>
+        <ion-label>
+          <span class="circle"></span> 潮河水质状况 </ion-label>
+      </ion-list-header>
+      <p class="list-header">
+        <span class='title'>{{obj.RLNAME}}</span>
+        <span [ngClass]='{"one-level":obj.RL_WATER_TYPE==="1","two-level":obj.RL_WATER_TYPE==="2",
+            "three-level":obj.RL_WATER_TYPE==="3","four-level":obj.RL_WATER_TYPE==="4",
+            "five-level":obj.RL_WATER_TYPE==="5","six-level":obj.RL_WATER_TYPE==="6"}' class="level-span">{{obj.RL_WATER_TYPE_JB}}</span>
+        <span class="time">{{obj.MTIME}}</span>
+      </p>
+
+        <ion-grid class="long-grid">
+          <ion-row>
+            <ion-col>
+              氨氮
+            </ion-col>
+            <ion-col>
+              PH
+            </ion-col>
+            <ion-col>
+              高锰酸钾
+            </ion-col>
+            <ion-col>
+              溶解氧
+            </ion-col>
+            <ion-col>
+              总磷
+            </ion-col>
+            <ion-col>
+              总氮
+            </ion-col>
+          </ion-row>
+          <p>{{obj.poi}}</p>
+          <ion-row *ngFor='let item of obj["poi"],let i = index'>
+            <ion-col>
+              {{item.W21003}}mg/L
+            </ion-col>
+            <ion-col>
+              {{item.W01001}}
+            </ion-col>
+            <ion-col>
+              {{item.W01019}}mg/L
+            </ion-col>
+            <ion-col>
+              {{item.W01009}}mg/L
+            </ion-col>
+            <ion-col>
+              {{item.W21011}}mg/L
+            </ion-col>
+            <ion-col>
+              {{item.W21001}}mg/L
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+
+    </div>
+  </div>
+
+
 </ion-content>
