--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,4 +1,50 @@
-.welcome-card ion-img {
+
+$mainColor:#303030;
+$subColor:#666;
+.five-level ion-img {
   max-height: 35vh;
   overflow: hidden;
 }
+.list-header{
+  color: $mainColor;
+  width:95%;
+  margin: 0 auto;
+  border-bottom: 1px solid lightgrey;
+  .title{
+    font-size: 20px;
+  }
+  .level-span{
+    margin-left: 10px;
+    padding:3px 6px;
+    color:#fff;
+    border-radius: 4px;
+  }
+  .time{
+    float: right;
+    color: #999;
+  }
+
+  .long-grid{
+    width:1000px;
+  }
+}
+
+.one-level {
+  background-color: #4ea9ff;
+}
+.two-level {
+  background-color: #0067ff;
+}
+.three-level  {
+  background-color: #00ff00;
+}
+.four-level  {
+  background-color: #ffff00;
+}
+.five-level  {
+  background-color: #ffd700;
+}
+.six-level  {
+  background-color: #fc0105;
+}
+
