--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,37 +2,24 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
+      <ion-icon name="home"></ion-icon>
       <ion-label>首页</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
+      <ion-icon name="globe"></ion-icon>
       <ion-label>地图</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
+      <ion-icon name="map"></ion-icon>
       <ion-label>排序</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
-      <ion-icon name="send"></ion-icon>
+      <ion-icon name="cloud"></ion-icon>
       <ion-label>关于</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-  
-  <!-- <ion-tab title='yu' icon-off="thsicon-home" icon-on='thsicon-home1' href='#/tab1'>
-      
-  </ion-tab>
-  <ion-tab title='yu' icon-off="thsicon-cloud" icon-on='thsicon-cloud1' href='#/tab1'>
-      
-  </ion-tab>
-  <ion-tab title='yu' icon-off="thsicon-cloud" icon-on='thsicon-cloud1' href='#/tab1'>
-      
-  </ion-tab>
-  <ion-tab title='yu' icon-off="thsicon-cloud" icon-on='thsicon-cloud1' href='#/tab1'>
-      
-  </ion-tab> -->
 
 </ion-tabs>
