--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,24 +1,39 @@
 
-
+.body1{
+   color:#303030;
+   background: #f3f3f3;
+}
+ion-content{
+    --padding-start:0;
+    --padding-end:0;
+}
 ion-title{
     background: #0d89e9;
     --color:#fff;
     font-size:16px;
+    font-weight:700;
 }
 
-.list-header{
-    padding-left: 15px;;
+ion-icon[name='add']{
+    color: #fff;
+}
+
+/* 模块头部 */
+ion-list-header{
     height:30px;
     line-height: 30px;
+    font-size:16px;
+    font-weight: 700;
+    border-bottom:1px solid #fdfdfd;
+    /* box-shadow: 0 0px 1px 0px rgba(226, 223, 223,0.2);  */  
 }
-
-.list-header .circle{
+.circle{
     display: inline-block;
     width: 8px;
     height: 8px;
     border-radius:50%; 
     position: relative;
-    top: 5px;
-    margin-right:15px;
+    top: 0;
+    margin-right:8px;
     background: #1689e6;
 }
