--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -17,7 +17,7 @@
         </ion-label>
       </ion-list-header>
 
-      <div class="card-li" *ngFor='let item of obj.poi'>
+      <div class="card-li" *ngFor='let item of obj.opi'>
         <p class="list-header">
           <span class='title'>{{item.WQ_AM_PI_NAME}}</span>
           <span [ngClass]='{"one-level":item.WATER_TYPE==="1","two-level":item.WATER_TYPE==="2",
