--- a/src/app/pages/setion-info/setion-info.page.scss
+++ b/src/app/pages/setion-info/setion-info.page.scss
@@ -1,7 +1,67 @@
 
+$modeBack:#fff;
+ion-list-header{
+    height: 30px;
+    line-height: 30px;
+    font-size: 16px;
+    border-bottom:1px solid #e1e1e1; 
+    background: $modeBack;
+}
+.section-content{
+    padding: 7.5px 10px 10px 10px; 
+    overflow: hidden;
+    margin-bottom: 7px;
+    background: $modeBack;
+}
+
+
+/* 站点介绍 */
+.title-icon{
+    width:18px;
+    height: auto;
+    position: relative;
+    top: 2px;
+    margin-right: 10px;
+}
+
+.paragrap{
+    line-height: 24px;
+    font-size: 14px;
+    max-height: 95px;
+    text-indent: 2em;
+    overflow: hidden;
+}
+.expand{
+    margin: 0;
+    float: right;
+    width: 70px;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 15px;
+    font-size: 12px; 
+    color:#696969;
+    background: #ececec;
+    text-align: center;
+    cursor: pointer;
+}
+
+/* 站点环境 */
+.section-con{
+    padding: 10px 0;
+    img{
+        width: 100%;
+        height: auto;
+    }
+}
+
+.water-grid{
+    background: $modeBack;
+}
+
+
 .charts {
     margin-top: 0px;
     width: 100%; 
     height: 270px; 
-    margin-bottom: 10px
+    margin-bottom: 10px;
 }
