--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1,39 +1,95 @@
+.body1 {
+    color: #303030;
+    background: #f3f3f3;
+}
 
-.body1{
-   color:#303030;
-   background: #f3f3f3;
+.flex-block {
+    display: flex;
+    display: -webkit-flex;
+    display: -moz-flex;
 }
-ion-content{
-    --padding-start:0;
-    --padding-end:0;
+
+.flex1 {
+    flex: 1;
 }
-ion-title{
-    background: #0d89e9;
+
+.flex1+.flex1 {
+    margin-left: 7px;
+}
+
+span{
+    display:inline-block;
+}
+ion-list-header{
+    --background:#fff;
+}
+ion-content {
+    --padding-start: 0;
+    --padding-end: 0;
+    --background: #f3f3f3;
+}
+
+ion-toolbar {
+    --background: #0d89e9;
+    --color: #fff;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+ion-back-button{
     --color:#fff;
-    font-size:16px;
-    font-weight:700;
 }
 
-ion-icon[name='add']{
+ion-icon[name='add'] {
     color: #fff;
 }
 
-/* 模块头部 */
-ion-list-header{
-    height:30px;
-    line-height: 30px;
-    font-size:16px;
-    font-weight: 700;
-    border-bottom:1px solid #fdfdfd;
-    /* box-shadow: 0 0px 1px 0px rgba(226, 223, 223,0.2);  */  
+ion-back-button {
+    color: #fff;
 }
-.circle{
+
+.one-level {
+    background-color: #4ea9ff;
+}
+
+.two-level {
+    background-color: #0067ff;
+}
+
+.three-level {
+    background-color: #00ff00;
+}
+
+.four-level {
+    background-color: #ffff00;
+}
+
+.five-level {
+    background-color: #ffd700;
+}
+
+.six-level {
+    background-color: #fc0105;
+}
+
+/* 模块头部 */
+
+ion-list-header {
+    height: 30px;
+    line-height: 30px;
+    font-size: 16px;
+    font-weight: 700;
+    border-bottom: 1px solid #fdfdfd;
+    /* box-shadow: 0 0px 1px 0px rgba(226, 223, 223,0.2);  */
+}
+
+.circle {
     display: inline-block;
     width: 8px;
     height: 8px;
-    border-radius:50%; 
+    border-radius: 50%;
     position: relative;
     top: 0;
-    margin-right:8px;
+    margin-right: 8px;
     background: #1689e6;
 }
